--- a/ui.html
+++ b/ui.html
@@ -40,8 +40,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nmTEmMww'>Jobvite, Inc. Careers - UI Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=noVHmMwD'>Jobvite, Inc. Careers - UI Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nmTEmMww'>Jobvite, Inc. Careers - UI Developer</a></h5> 
+<p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=twitter'>
@@ -58,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=feed'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=feed'>
       Designer VUI/UX at New York Public Radio - Anywhere - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
@@ -72,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://bookingkit.join.com/jobs/462941-ux-ui-designer-m-f-d'>Job @ bookingkit (Berlin): UX/UI Designer (m/f/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bookingkit.join.com/jobs/462941-ux-ui-designer-m-f-d'>Job @ bookingkit (Berlin): UX/UI Designer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -84,7 +88,7 @@
 <p><span class="badge badge-light">France  France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://verifiedrecruit.com/job/recruiting-bank-tellers-for-a-leading-bank-nationwide/'>RECRUITING BANK TELLERS FOR A LEADING BANK NATIONWIDE? - Verified Recruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verifiedrecruit.com/job/recruiting-bank-tellers-for-a-leading-bank-nationwide/'>RECRUITING BANK TELLERS FOR A LEADING BANK NATIONWIDE? - Verified Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -96,7 +100,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://crosscast.be/job/ui-designer/?platform=hootsuite&utm_campaign=talent-ui-designer'>UI Designer | CrossCast - Freelance platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crosscast.be/job/ui-designer/?platform=hootsuite&utm_campaign=talent-ui-designer'>UI Designer | CrossCast - Freelance platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -159,7 +163,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
+<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -201,7 +205,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://ongoing.join.com/jobs/463683-web-developer-frontend-ui-ux-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): Web-Developer (Frontend / UI ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ongoing.join.com/jobs/463683-web-developer-frontend-ui-ux-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): Web-Developer (Frontend / UI ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -209,7 +213,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.domestika.org/es/jobs/74757-ui-visual-designer-sevilla-espana'>UI / Visual Designer - Emergya Ingenier?a - Sevilla, Espa?a (21/10/19) | Domestika</a></h5> 
+<h5><a href='https://www.domestika.org/es/jobs/74757-ui-visual-designer-sevilla-espana'>UI / Visual Designer - Emergya Ingenier?a - Sevilla, Espa?a (21/10/19) | Domestika</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -253,13 +257,13 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://admind1.recruitee.com/o/uxui-designer-krakow'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://admind1.recruitee.com/o/uxui-designer-krakow'>
       UX/UI Designer - Admind
     </a></h5> 
 <p><span class="badge badge-light">Krak?w Krak?w</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/jbs/job/ofRqbfwr'> JBS USA Careers - EMPLOYMENT RECRUITER</a></h5> 
+<h5><a href='http://jobs.jobvite.com/jbs/job/ofRqbfwr'> JBS USA Careers - EMPLOYMENT RECRUITER</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -275,7 +279,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://we-recruit.join.com/jobs/459255-recruitment-consultant-headhunter-zurich-take-your-shot'>Job @ WE RECRUIT (Z?rich): Recruitment Consultant/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/459255-recruitment-consultant-headhunter-zurich-take-your-shot'>Job @ WE RECRUIT (Z?rich): Recruitment Consultant/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -325,11 +329,11 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/research-specialist-5592'>Research Specialist - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/research-specialist-5592'>Research Specialist - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/central-service-tech-i-css-5587'>Central Service Tech I-CSS - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/central-service-tech-i-css-5587'>Central Service Tech I-CSS - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -337,7 +341,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/clin-trials-rsrch-asst-data-mg-5588'>Clin Trials Rsrch Asst/Data Mg - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/clin-trials-rsrch-asst-data-mg-5588'>Clin Trials Rsrch Asst/Data Mg - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -433,7 +437,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sprinthub-mobile.breezy.hr/p/f5fcea30cdc5-ui-ux-designer'>UI/UX Designer at Sprinthub Mobile</a></h5> 
+<h5><a href='https://sprinthub-mobile.breezy.hr/p/f5fcea30cdc5-ui-ux-designer'>UI/UX Designer at Sprinthub Mobile</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -445,7 +449,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698213734-emploi-etudiant-equipier-temps-partiel-cuisine'>McDonald's Restaurants EMPLOI ?TUDIANT ?quipier temps partiel CUISINE | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698213734-emploi-etudiant-equipier-temps-partiel-cuisine'>McDonald's Restaurants EMPLOI ?TUDIANT ?quipier temps partiel CUISINE | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -458,10 +462,6 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p>Posted on: 2019-10-26</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698213226-6h-a-14h-lundi-au-vendredi-equipier-a-temps-plein-cuisine'>McDonald's Restaurants 6H ? 14H LUNDI AU VENDREDI ?quipier ? temps plein CUISINE | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Canada</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698213192-4h30-a-13h-lundi-au-vendredi-equipier-a-temps-plein-cuisine'>McDonald's Restaurants 4H30 ? 13H LUNDI AU VENDREDI ?quipier ? temps plein CUISINE | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
